# zippylog

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README  README.md  setup.py
doc/: general-development.md  linux-development.md  lua-api.md  mac-development.md  protocol.md  windows-development.md  zippylogd.md
example/acme/: os.proto  webapp.proto
lib/py/pblog/: actor.py  envelope.py  event.py  message.py  message_pb2.py  pblog_pb2.py  pblogd_pb2.py  proto  protocol_pb2.py  reader.py  store.py  stream.py  test.py  writer.py
lib/py/pblog/protocol/: request_pb2.py  response_pb2.py
lib/py/pblog/test/: __init__.py  store_test.py  writer_test.py
lib/py/zippylog/: actor.py  core_pb2.py  envelope.py  exception.py  message_pb2.py  proto  protocol_pb2.py  request_processor_pb2.py  state.json  store.py  stream.py  zippylog_pb2.py  zippylogd_pb2.py
lib/py/zippylog/device/: request_processor_pb2.py  server_pb2.py  store_watcher_pb2.py  streamer_pb2.py
lib/py/zippylog/protocol/: request_pb2.py  response_pb2.py
lib/py/zippylog/test/: __init__.py  store_test.py
msvc/: .gitignore  gtest.vcproj  liblua.vcproj  libprotobuf.vcproj  libzippylog.vcproj  libzippylogd.vcproj  libzmq.vcproj  zippylog-test.vcproj  zippylog.sln  zippylog.vcproj  zippylog.vsprops  zippylog_string_writer.vcproj  zippylogbench.vcproj  zippylogcat.vcproj  zippylogclient.vcproj  zippylogd.vcproj
proto/: pblog-state.json  pblog.proto  zippylog-state.json
proto/pblog/: message.proto  pblog.proto  pblogd.proto  protocol.proto
proto/pblog/protocol/: request.proto  response.proto
proto/zippylog/: core.proto  message.proto  protocol.proto  request_processor.proto  zippylogd.proto
proto/zippylog/device/: server.proto  store_watcher.proto  streamer.proto
proto/zippylog/protocol/: request.proto  response.proto
src/: lua-protobuf.cc  lua-protobuf.h  pblogclient.cpp  pblogd.cpp  zippylog_string_loader.cpp  zippylog_string_writer.cpp  zippylogbench.cpp  zippylogcat.cpp  zippylogclient.cpp  zippylogd.cpp
src/pblog/: broker.cpp  broker.hpp  client.cpp  client.hpp  envelope.cpp  envelope.hpp  message.pb.cc  message.pb.h  message_registrar.hpp  messages.cpp  messages.hpp  pblog.h  pblog.pb.cc  pblog.pb.h  pblogd.pb.cc  pblogd.pb.h  platform.cpp  platform.hpp  protocol.pb.cc  protocol.pb.h  server.cpp  server.hpp  store.cpp  store.hpp  stream.cpp  stream.hpp
src/pblog/protocol/: request.pb.cc  request.pb.h  response.pb.cc  response.pb.h
src/zippylog/: broker.cpp  broker.hpp  client.cpp  client.hpp  client_unittest.cpp  core.pb.cc  core.pb.h  envelope.cpp  envelope.hpp  envelope_unittest.cpp  libzippylog-test.cc  lua.cpp  lua.hpp  lua_unittest.cpp  message.pb-lua.cc  message.pb-lua.h  message.pb.cc  message.pb.h  message_registrar.cpp  message_registrar.hpp  messages.cpp  messages.hpp  pblog.h  persisted_state_manager.cpp  persisted_state_manager.hpp  platform.cpp  platform.hpp  platform_unittest.cpp  protocol.pb-lua.cc  protocol.pb-lua.h  protocol.pb.cc  protocol.pb.h  request_processor.cpp  request_processor.hpp  request_processor.pb-lua.cc  request_processor.pb-lua.h  request_processor.pb.cc  request_processor.pb.h  request_processor_unittest.cpp  server.cpp  (+24 more)
src/zippylog/device/: device.cpp  device.hpp  persisted_state_manager_unittest.cpp  persisted_state_reactor.cpp  persisted_state_reactor.hpp  piper.cpp  piper.hpp  request_processor.pb.cc  request_processor.pb.h  server.cpp  server.hpp  server.pb-lua.cc  server.pb-lua.h  server.pb.cc  server.pb.h  server_unittest.cpp  server_watcher.cpp  server_worker.cpp  store_watcher.pb-lua.cc  store_watcher.pb-lua.h  store_watcher.pb.cc  store_watcher.pb.h  store_writer.cpp  store_writer.hpp  store_writer_sender.cpp  store_writer_sender.hpp  streamer.cpp  streamer.hpp  streamer.pb-lua.cc  streamer.pb-lua.h  streamer.pb.cc  streamer.pb.h  streamer_unittest.cpp  string_loader.cpp  string_loader.hpp  string_loader_unittest.cpp  string_receiver.cpp  string_receiver.hpp  string_receiver_unittest.cpp  string_writer.cpp  (+1 more)
src/zippylog/protocol/: request.pb-lua.cc  request.pb-lua.h  request.pb.cc  request.pb.h  response.pb-lua.cc  response.pb-lua.h  response.pb.cc  response.pb.h
src/zippylog/zippylogd/: broker.cpp  broker.hpp  request_processor.cpp  streamer.cpp  streamer.hpp  util.cpp  util.hpp  watcher.cpp  watcher.hpp  worker.cpp  worker.hpp
test/lua/: process_line-00.lua  process_line-01.lua  process_line-02.lua  process_line-03.lua
test/stores/01-singlestream/A/B/: 2010-11-26-07.zippylog
test/stores/02-multiple/bucketA/set0/: 2011-03-19-21.zippylog
